--- a/퍼블리싱/cozyshop/css/style.css
+++ b/퍼블리싱/cozyshop/css/style.css
@@ -38,3 +38,64 @@ a {
 	padding: 0 10px;
 	line-height: 30px;
 }
+
+/** 사이트 로고, 검색, 아이콘 메뉴 */
+.logo_search .box {
+	width: calc(100% / 3);
+	float: left;
+}
+
+.logo_search .inner:after {
+	clear: left;
+	content: '';
+	display: block;
+}
+
+.logo_search .logo {
+	text-align: center;
+	padding: 46px 0;
+}
+
+.logo_search .logo img {
+	height: 28px;
+}
+
+.logo_search .search {
+	padding-top: 40px;
+}
+
+.logo_search .search input[type='image'] {
+	height: 37px;
+	vertical-align: middle;
+}
+
+.logo_search .search .form_wrap {
+	width: 200px;
+	border-bottom: 1px solid #222222;
+	float: right;
+}
+
+.logo_search .search:after {
+	clear: right;
+	content: '';
+	display: block;
+}
+.logo_search .search input[type='text'] {
+	width: calc(100% - 27px);
+	border: 0;
+	position: relative;
+	top: 5px;
+}
+
+.logo_search .icon_menu a:nth-child(1) img {
+	height: 62px;
+}
+
+.logo_search .icon_menu a:nth-child(2) img,
+.logo_search .icon_menu a:nth-child(3) img {
+	height: 68px;
+}
+
+.logo_search .icon_menu {
+	padding: 26px 0;
+}
