--- a/퍼블리싱/cozyshop/css/style.css
+++ b/퍼블리싱/cozyshop/css/style.css
@@ -166,3 +166,35 @@ nav li.more_menu {
 .main_banner .swiper-wrapper .swiper-slide:nth-child(3n) {
 	background:url("../img/banner3.jpg") no-repeat center center;
 }
+
+
+.main_banner .swiper-pagination-bullet {
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+	background-color: #ffffff;
+	cursor: pointer;
+	border-radius: 50%;
+	opacity: 0.9;
+	box-shadow: 0px 2px 4px #212121;
+}
+
+.main_banner .swiper-pagination-bullet-active {
+	width: 50px;
+	border-radius: 6px;
+}
+.main_banner .navi {
+	position: absolute;
+	font-size: 30px;
+	top: calc(600px / 2 - 15px);
+	z-index: 10;
+	cursor: pointer;
+}
+
+.main_banner .navi.prev {
+	left: 10px;
+}
+
+.main_banner .navi.next {
+	right: 10px;
+}
