--- a/퍼블리싱/cozyshop/css/style.css
+++ b/퍼블리싱/cozyshop/css/style.css
@@ -491,6 +491,7 @@ footer .customer_service_info > .info {
 
 footer .customer_service_info .box {
 	display: table-cell;
+	vertical-align: middle;
 }
 
 footer .customer_service_info .box1 { 
@@ -517,7 +518,7 @@ footer .customer_service_info .text2 {
 }
 
 footer .customer_service_info .box4 .text2 {
-	font-size: 25px;
+	font-size: 20px;
 }
 
 footer .customer_service_info .btn {
@@ -539,4 +540,48 @@ footer .customer_service_info .btn:hover {
 
 footer .customer_service_info .box3 .btn:first-child {
 	margin-bottom: 3px;
+}
+
+footer .customer_service_info .text3 {
+	font-size: 16px; 
+	font-weight: 500;
+	letter-spacing: -1px;
+}
+
+footer .customer_service_info .text4 {
+	font-weight: 500;
+	font-size: 14px;
+	letter-spacing: -1px;
+}
+
+footer .customer_service_info .text5 {
+	letter-spacing: -1px;
+}
+
+footer .customer_service_info .box4 {
+	padding: 0 10px 0 25px;
+}
+
+/** 하단 사이트 안내 & 공지사항 */
+footer .site_guide {
+	padding: 20px 0 17px;
+}
+
+footer .site_guide .site_map {
+	float: left;
+	width: calc(100% - 330px);
+}
+
+footer .site_guide .notice_box {
+	float: right;
+	width: 330px;
+	border: 1px solid #ced0d1;
+	background-color: #ffffff;
+	padding: 15px;
+}
+
+footer .site_guide:after {
+	clear: both;
+	content: '';
+	display: block;
 }
